# rakit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.txt  devil.cmd  rakit.cmd  test_cetak_x.rakit  test_fncall.rakit  test_if_call.rakit  test_if_call2.rakit  test_paren.rakit  test_simple2.rakit  test_simple_call.rakit  test_var.rakit
benchmark/: Cargo.toml
benchmark/src/: compile_bench.rs  diff_bench.rs  lib.rs  render_bench.rs
docs/: FAQ.md  HOOKS.md  KOMPONEN.md  PENDAHULUAN.md  PLATFORM.md  POLYGLOT.md  README.md  SINTAKSIS.md
examples/: .gitignore  c2.rakit  c3.rakit  c4.rakit  c5.rakit  c6.rakit  c7.rakit  c8.rakit  c9.rakit  demo.rakit  examples.js  examples_bg.wasm  index.html  math.rakit  simple3.rakit  test_fn.rakit  test_if.rakit  test_if2.rakit  test_if3.rakit  test_if4.rakit  test_if5.rakit  test_import.rakit  test_mut2.rakit  utils.rakit
examples/komprehensif/: data.rakit  komprehensif.d.ts  komprehensif.js  komprehensif_bg.wasm.d.ts  main.rakit
examples/komprehensif/komponen/: Daftar.rakit  Kalkulator.rakit  Kartu.rakit  Tombol.rakit
examples/src/: c1.rakit  c10.rakit  c3.rakit  demo.rakit  hello.rakit  simple.rakit  simple2.rakit  test_fn.rakit  test_import.rakit  test_mut.rakit
examples/src/komprehensif/: fungsi.rakit  kontrol.rakit
examples/src/komprehensif/komponen/: App.rakit  Footer.rakit  Header.rakit
rakit-backend-gtk4/: Cargo.toml
rakit-backend-gtk4/src/: css.rs  event.rs  lib.rs  widget.rs  window.rs
rakit-backend-web/: Cargo.toml
rakit-backend-web/src/: cssom.rs  dom.rs  event.rs  lib.rs
rakit-backend-win32/: Cargo.toml
rakit-backend-win32/src/: control.rs  event.rs  ffi.rs  lib.rs  painter.rs  resources.rs  window.rs
rakit-bridge/: Cargo.toml
rakit-bridge/src/: ast_to_brak.rs  brak_types.rs  error.rs  hir_to_mir.rs  lib.rs  pipeline.rs  ty_mapping.rs
rakit-codegen/: Cargo.toml
rakit-codegen/src/: lib.rs
rakit-core/: Cargo.toml
rakit-core/src/: lib.rs
rakit-doc/: Cargo.toml
rakit-doc/src/: extract.rs  lib.rs  render.rs  search.rs
rakit-fmt/: Cargo.toml
rakit-fmt/src/: config.rs  fmt.rs  lib.rs  rules.rs
rakit-frontend/: Cargo.toml
rakit-frontend/src/lexer/: mod.rs  token.rs  token_kind.rs
rakit-frontend/src/parser/: component.rs  expr.rs  mod.rs  stmt.rs
rakit-ir-ast/: Cargo.toml
rakit-ir-ast/src/: ast.rs  lib.rs  pretty.rs  ty.rs
rakit-ir-hir/: Cargo.toml
rakit-ir-hir/src/: hir.rs  lib.rs  pretty.rs  resolve.rs
rakit-ir-hir/src/lower/: expr.rs  jsx.rs  mod.rs  pattern.rs  stmt.rs
rakit-ir-hir/src/ty/: checker.rs  infer.rs  mod.rs  unify.rs
rakit-lsp/: Cargo.toml
rakit-lsp/src/: code_action.rs  completions.rs  diagnostics.rs  folding.rs  formatting.rs  hover.rs  lib.rs  references.rs  rename.rs  symbols.rs
rakit-opt/: Cargo.toml
rakit-opt/src/: async_opt.rs  constant_props.rs  dce_vdom.rs  inline_components.rs  lib.rs  memo_hoist.rs  tree_shaking.rs
rakit-pm/: Cargo.toml
rakit-pm/src/: build.rs  fetch.rs  lib.rs  registry.rs  resolver.rs
rakit-polyglot/: Cargo.toml
rakit-polyglot/src/: abi.rs  c_bindings.rs  lib.rs  python_bindings.rs  rust_bindings.rs
rakit-runtime/: Cargo.toml
rakit-runtime/src/: boundary.rs  component.rs  devtools.rs  event.rs  fiber.rs  lib.rs  scheduler.rs
rakit-runtime/src/async/: executor.rs  mod.rs  stream.rs  suspense.rs
rakit-runtime/src/context/: consumer.rs  mod.rs  provider.rs  scope.rs
rakit-runtime/src/hook/: callback.rs  effect.rs  memo.rs  mod.rs  reducer.rs  ref_cell.rs  refs.rs  state.rs
rakit-runtime/tests/: fiber_test.rs  hooks_test.rs
rakit-site/: devil.json  main.rakit
rakit-site/halaman/: BrakInfo.rakit  DevilInfo.rakit  KodingInfo.rakit  RakitInfo.rakit
rakit-site/komponen/: Card.rakit  CodeBlock.rakit  Footer.rakit  Hero.rakit  Navbar.rakit  Section.rakit
rakit-test/: Cargo.toml
rakit-test/src/: dom.rs  lib.rs  runner.rs  snapshot.rs
rakit-tool/: Cargo.toml
rakit-tool/src/: main.rs
rakit-tool/src/commands/: build.rs  dev.rs  emit_ir.rs  init.rs  mod.rs
rakit-ui/: Cargo.toml
rakit-ui/src/: app.rs  backend.rs  event_loop.rs  lib.rs
rakit-vdom/: Cargo.toml
rakit-vdom/src/: h.rs  lib.rs  node.rs  utils.rs
rakit-vdom/src/diff/: boundary.rs  children.rs  element.rs  mod.rs
rakit-vdom/src/patch/: dom.rs  mod.rs  native.rs
rakit-vdom/src/render/: mod.rs  native.rs  ssr.rs  wasm.rs
rakit-vdom/tests/: vdom_test.rs
samples/: async.rakit  counter.rakit  daftar.rakit  desktop.rakit  error.rakit  fragment.rakit  hello.rakit  konteks.rakit  pengedger.rakit  ssr.rakit  test.rakit  web.rakit
