[package]
name = "rakit-backend-win32"
version = "1.0.5"
edition = "2021"

[dependencies]
rakit-ui = { path = "../rakit-ui" }
rakit-runtime = { path = "../rakit-runtime" }
rakit-vdom = { path = "../rakit-vdom" }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
] }
