[package]
name = "rakit-doc"
version = "1.0.5"
edition = "2021"
description = "Rakit documentation generator — extract, render, search"

[dependencies]
rakit-core = { path = "../rakit-core" }
rakit-ir-hir = { path = "../rakit-ir-hir" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
