[package]
name = "rakit-opt"
version = "1.0.5"
edition = "2021"
description = "Rakit optimizer — inline, DCE, constant propagation, tree shaking, memo hoist, async opt"

[dependencies]
rakit-core = { path = "../rakit-core" }
rakit-ir-hir = { path = "../rakit-ir-hir" }
rakit-vdom = { path = "../rakit-vdom" }
serde = { version = "1", features = ["derive"] }
